Scaffold out models, associations, and views to demonstrate bug

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <nav>
+      <li><%= link_to 'Groups', root_path %></li>
+    </nav>
     <%= yield %>
   </body>
 </html>
