Add a comment to show how to debug and see the collection proxy before error

--- a/app/views/memberships/show.html.erb
+++ b/app/views/memberships/show.html.erb
@@ -3,6 +3,7 @@
 <p>
   <strong>Contacts</strong>
   <ul>
+    <!-- if you throw a byebug statement here, you can inspect before the error -->
     <%- @membership.contacts.each do |contact| %>
       <li><%= contact.value %></li>
     <%- end %>
