Add group_contacts through membership > person to provide a working case
Not sure what it is about the Membership having issues, but other has_many :through relationships don't encounter the same issue. Could it be due to being flagged as 'HABTM'-type model without the actual HABTM relationship, and the name constantizing breaks because of that?

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -8,3 +8,12 @@
     <%- end %>
   </ul>
 </p>
+
+<p>
+  <strong>Contacts (<%= @group.group_contacts.count %>)</strong>
+  <ul>
+    <%- @group.group_contacts.each do |contact| %>
+      <li><%= contact.value %> (from <%= contact.person_name %>)</li>
+    <%- end %>
+  </ul>
+</p>
